--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -38,6 +38,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="VKApi.cs" />
+    <Compile Include="VK\Entities\Audio.cs" />
+    <Compile Include="VK\Entities\Document.cs" />
+    <Compile Include="VK\Entities\Privacy.cs" />
+    <Compile Include="VK\Entities\Video.cs" />
+    <Compile Include="VK\EntityParsers\AudioParser.cs" />
+    <Compile Include="VK\EntityParsers\DocumentParser.cs" />
+    <Compile Include="VK\EntityParsers\PrivacyParser.cs" />
+    <Compile Include="VK\EntityParsers\VideoParser.cs" />
+    <Compile Include="VK\Helpers\DataTypes\AudioGenre.cs" />
     <Compile Include="VK\Entities\Group.cs" />
     <Compile Include="VK\Entities\Photo.cs" />
     <Compile Include="VK\EntityFragments\GroupCounters.cs" />
