--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -37,6 +37,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Executors\IExecutor.cs" />
+    <Compile Include="Data\Request\ResponseStatus.cs" />
+    <Compile Include="Data\Request\VKResponse.cs" />
+    <Compile Include="Data\Parameters\NameCase.cs" />
+    <Compile Include="Data\Executors\SimpleXMLExecutor.cs" />
+    <Compile Include="Data\Parameters\UserFields.cs" />
     <Compile Include="Helpers\DataTypes\UInt40.cs" />
     <Compile Include="VKApi.cs" />
     <Compile Include="Core\Entities\Attachment.cs" />
@@ -106,8 +112,8 @@
     <Compile Include="Core\Interfaces\IVKEntity.cs" />
     <Compile Include="Core\Interfaces\IVKEntityParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Helpers\Requests\VKRequest.cs" />
-    <Compile Include="Helpers\Api\VKToken.cs" />
+    <Compile Include="Data\Request\VKRequest.cs" />
+    <Compile Include="Data\Api\VKToken.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helpers\Exceptions\" />
