--- a/Sources/TestApp/TestApp.csproj
+++ b/Sources/TestApp/TestApp.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ConTools">
+      <HintPath>..\..\Libs\ConTools.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
