--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -40,11 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\Friends.cs" />
+    <Compile Include="Api\Users.cs" />
+    <Compile Include="Api\Wrappers\Friends.cs" />
+    <Compile Include="Api\Wrappers\Users.cs" />
     <Compile Include="Core\Entities\EntityList.cs" />
     <Compile Include="Core\EntityParsers\EntityListParser.cs" />
     <Compile Include="Core\EntityParsers\ProfileCountersParser.cs" />
     <Compile Include="Data\Api\VKPermission.cs" />
     <Compile Include="Data\Executors\IExecutor.cs" />
+    <Compile Include="Data\Parameters\UserSortOrder.cs" />
     <Compile Include="Data\Request\ResponseStatus.cs" />
     <Compile Include="Data\Request\VKResponse.cs" />
     <Compile Include="Data\Parameters\NameCase.cs" />
