--- a/Sources/TestApp/TestApp.csproj
+++ b/Sources/TestApp/TestApp.csproj
@@ -35,6 +35,10 @@
     <Reference Include="ConTools">
       <HintPath>..\..\Libs\ConTools.dll</HintPath>
     </Reference>
+    <Reference Include="EpicMorg.Net.AWC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Libs\EpicMorg.Net.AWC.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
