--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -136,7 +136,7 @@
     <Compile Include="Helpers\BuiltInData.cs" />
     <Compile Include="Core\Interfaces\OwnedEntity.cs" />
     <Compile Include="Core\Interfaces\IVKEntity.cs" />
-    <Compile Include="Core\Interfaces\IVKEntityParser.cs" />
+    <Compile Include="Core\Interfaces\IXmlVKEntityParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\Request\VKRequest.cs" />
     <Compile Include="Data\Api\VKToken.cs" />
