--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Api\Audios.cs" />
     <Compile Include="Api\Friends.cs" />
     <Compile Include="Api\Wrappers\Audios.cs" />
+    <Compile Include="Core\Interfaces\IXmlVKEntityParser_2.cs" />
     <Compile Include="Data\Parameters\SearchSortOrder.cs" />
     <Compile Include="Api\Users.cs" />
     <Compile Include="Api\Groups.cs" />
