--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Api\Audios.cs" />
     <Compile Include="Api\Friends.cs" />
     <Compile Include="Api\Wrappers\Audios.cs" />
+    <Compile Include="Core\Enums\Deleted.cs" />
     <Compile Include="Core\Enums\VKPlatform.cs" />
     <Compile Include="Core\EntityFragments\Relative.cs" />
     <Compile Include="Core\Enums\RelativeType.cs" />
