--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -48,10 +48,10 @@
     <Compile Include="Api\Audios.cs" />
     <Compile Include="Api\Auth.cs" />
     <Compile Include="Api\Friends.cs" />
-    <Compile Include="Api\Wrappers\Audios.cs" />
-    <Compile Include="Api\Wrappers\Auth.cs" />
-    <Compile Include="Api\Wrappers\Database.cs" />
-    <Compile Include="Api\Wrappers\Wall.cs" />
+    <None Include="Api\Wrappers\Audios.cs" />
+    <None Include="Api\Wrappers\Auth.cs" />
+    <None Include="Api\Wrappers\Database.cs" />
+    <None Include="Api\Wrappers\Wall.cs" />
     <Compile Include="Core\Entities\City.cs" />
     <Compile Include="Core\Entities\DatabaseEntry.cs" />
     <Compile Include="Core\Entities\Lyrics.cs" />
@@ -59,6 +59,7 @@
     <Compile Include="Core\EntityParsers\Xml\DatabaseEntryParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\LastSeenParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\LyricsParser.cs" />
+    <Compile Include="Core\EntityParsers\Xml\SimpleEntityParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\StructEntityParser.cs" />
     <Compile Include="Core\Enums\ComplaintType.cs" />
     <Compile Include="Core\Enums\Deleted.cs" />
@@ -75,10 +76,10 @@
     <Compile Include="Data\Parameters\SearchSortOrder.cs" />
     <Compile Include="Api\Users.cs" />
     <Compile Include="Api\Groups.cs" />
-    <Compile Include="Api\Wrappers\Account.cs" />
-    <Compile Include="Api\Wrappers\Friends.cs" />
-    <Compile Include="Api\Wrappers\Groups.cs" />
-    <Compile Include="Api\Wrappers\Users.cs" />
+    <None Include="Api\Wrappers\Account.cs" />
+    <None Include="Api\Wrappers\Friends.cs" />
+    <None Include="Api\Wrappers\Groups.cs" />
+    <None Include="Api\Wrappers\Users.cs" />
     <Compile Include="Core\Entities\BanInfo.cs" />
     <Compile Include="Core\Entities\EntityList.cs" />
     <Compile Include="Core\EntityParsers\Xml\BanInfoParser.cs" />
