--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\Utils.cs" />
+    <Compile Include="Api\Storage.cs" />
+    <Compile Include="Api\Messages.cs" />
     <Compile Include="Api\Videos.cs" />
     <Compile Include="Api\Photos.cs" />
     <Compile Include="Api\Wall.cs" />
@@ -55,8 +58,11 @@
     <None Include="Api\Wrappers\Wall.cs" />
     <Compile Include="Core\Entities\City.cs" />
     <Compile Include="Core\Entities\DatabaseEntry.cs" />
+    <Compile Include="Core\Entities\LinkCheckResult.cs" />
     <Compile Include="Core\Entities\Lyrics.cs" />
     <Compile Include="Core\Entities\MemberShip.cs" />
+    <Compile Include="Core\Entities\StorageEntry.cs" />
+    <Compile Include="Core\EntityParsers\StorageEntryParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\DatabaseEntryParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\LastSeenParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\LyricsParser.cs" />
@@ -64,6 +70,7 @@
     <Compile Include="Core\EntityParsers\Xml\StructEntityParser.cs" />
     <Compile Include="Core\Enums\ComplaintType.cs" />
     <Compile Include="Core\Enums\Deleted.cs" />
+    <Compile Include="Core\Enums\LinkCheckStatus.cs" />
     <Compile Include="Core\Enums\ReportReason.cs" />
     <Compile Include="Core\Enums\VKPlatform.cs" />
     <Compile Include="Core\EntityFragments\Relative.cs" />
