board.(...), messages.(...), notes.(...), status.set,

--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\Notes.cs" />
+    <Compile Include="Api\Board.cs" />
     <Compile Include="Api\Utils.cs" />
     <Compile Include="Api\Storage.cs" />
     <Compile Include="Api\Messages.cs" />
