--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\Notifications.cs" />
     <Compile Include="Api\Pages.cs" />
     <Compile Include="Api\Docs.cs" />
     <Compile Include="Api\Status.cs" />
