--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -59,23 +59,24 @@
     <Compile Include="Api\Audios.cs" />
     <Compile Include="Api\Auth.cs" />
     <Compile Include="Api\Friends.cs" />
-    <None Include="Api\Wrappers\Audios.cs" />
-    <None Include="Api\Wrappers\Auth.cs" />
-    <None Include="Api\Wrappers\Database.cs" />
-    <None Include="Api\Wrappers\Wall.cs" />
     <Compile Include="Core\Entities\City.cs" />
     <Compile Include="Core\Entities\DatabaseEntry.cs" />
     <Compile Include="Core\Entities\LinkCheckResult.cs" />
     <Compile Include="Core\Entities\Lyrics.cs" />
     <Compile Include="Core\Entities\MemberShip.cs" />
     <Compile Include="Core\Entities\StorageEntry.cs" />
+    <Compile Include="Core\Entities\UserSubscriptions.cs" />
+    <Compile Include="Core\EntityParsers\Xml\ExportsParser.cs" />
+    <Compile Include="Core\EntityParsers\Xml\GroupCountersParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\LinkCheckResultParser.cs" />
+    <Compile Include="Core\EntityParsers\Xml\RelativeParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\StorageEntryParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\DatabaseEntryParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\LastSeenParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\LyricsParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\SimpleEntityParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\StructEntityParser.cs" />
+    <Compile Include="Core\EntityParsers\Xml\UserSubscriptionsParser.cs" />
     <Compile Include="Core\Enums\ComplaintType.cs" />
     <Compile Include="Core\Enums\Deleted.cs" />
     <Compile Include="Core\Enums\LinkCheckStatus.cs" />
@@ -92,10 +93,6 @@
     <Compile Include="Data\Parameters\SearchSortOrder.cs" />
     <Compile Include="Api\Users.cs" />
     <Compile Include="Api\Groups.cs" />
-    <None Include="Api\Wrappers\Account.cs" />
-    <None Include="Api\Wrappers\Friends.cs" />
-    <None Include="Api\Wrappers\Groups.cs" />
-    <None Include="Api\Wrappers\Users.cs" />
     <Compile Include="Core\Entities\BanInfo.cs" />
     <Compile Include="Core\Entities\EntityList.cs" />
     <Compile Include="Core\EntityParsers\Xml\BanInfoParser.cs" />
