--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -196,6 +196,10 @@
     <Compile Include="Core\Enums\LifeMain.cs" />
     <Compile Include="Core\Enums\Attitude.cs" />
     <Compile Include="Core\EntityParsers\Xml\StandInLifeParser.cs" />
+    <Compile Include="Core\ResponseEntities\ConfirmResult.cs" />
+    <Compile Include="Core\EntityParsers\Xml\ConfirmResultParser.cs" />
+    <Compile Include="Core\Entities\Link.cs" />
+    <Compile Include="Core\EntityParsers\Xml\LinkParser.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -206,4 +210,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <Folder Include="Core\ResponseEntities\" />
+  </ItemGroup>
 </Project>
